--- a/.github/workflows/waka-readme.yml
+++ b/.github/workflows/waka-readme.yml
@@ -18,11 +18,11 @@ jobs:
       - uses: athul/waka-readme@master # this action name
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
-        #   GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          #   GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           REPOSITORY: mr-alham/mr-alham
           #   SHOW_TITLE: true
           #   SECTION_NAME: waka
-          #   BLOCKS: ░▒▓█
+          BLOCKS: ->
           #   TIME_RANGE: all_time
           #   LANG_COUNT: 10
           #   SHOW_TIME: true
@@ -34,7 +34,7 @@ jobs:
 
           SHOW_TITLE: true # optional
           SECTION_NAME: waka # optional
-          BLOCKS: ░▒▓█ # optional
+          #   BLOCKS: ░▒▓█ # optional
           CODE_LANG: rust # optional
           TIME_RANGE: all_time # optional
           LANG_COUNT: 10 # optional
