--- a/.github/workflows/waka-readme.yml
+++ b/.github/workflows/waka-readme.yml
@@ -18,26 +18,26 @@ jobs:
       - uses: athul/waka-readme@master # this action name
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        #   GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         #   REPOSITORY: mr-alham/mr-alham
           #   SHOW_TITLE: true
           #   SECTION_NAME: waka
-          BLOCKS: ->
+        #   BLOCKS: ->
           #   TIME_RANGE: all_time
           #   LANG_COUNT: 10
           #   SHOW_TIME: true
           #   SHOW_TOTAL: true
           #   SHOW_MASKED_TIME: true
 
-          COMMIT_MESSAGE: "[automated] Updated waka-readme graph with new metrics"
-          COMMITTER_NAME: "[bot]WakaGithubActions"
+        #   COMMIT_MESSAGE: "[automated] Updated waka-readme graph with new metrics"
+        #   COMMITTER_NAME: "[bot]WakaGithubActions"
 
-          SHOW_TITLE: true # optional
-          SECTION_NAME: waka # optional
-          #   BLOCKS: ░▒▓█ # optional
-          CODE_LANG: rust # optional
-          TIME_RANGE: all_time # optional
-          LANG_COUNT: 10 # optional
-          SHOW_TIME: true # optional
-          SHOW_TOTAL: true # optional
-          SHOW_MASKED_TIME: true # optional
+        #   SHOW_TITLE: true # optional
+        #   SECTION_NAME: waka # optional
+        #   #   BLOCKS: ░▒▓█ # optional
+        #   CODE_LANG: rust # optional
+        #   TIME_RANGE: all_time # optional
+        #   LANG_COUNT: 10 # optional
+        #   SHOW_TIME: true # optional
+        #   SHOW_TOTAL: true # optional
+        #   SHOW_MASKED_TIME: true # optional
