--- a/.github/workflows/waka-readme.yml
+++ b/.github/workflows/waka-readme.yml
@@ -20,14 +20,14 @@ jobs:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
         #   GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         #   REPOSITORY: mr-alham/mr-alham
-          #   SHOW_TITLE: true
+          SHOW_TITLE: true
           #   SECTION_NAME: waka
         #   BLOCKS: ->
-          #   TIME_RANGE: all_time
-          #   LANG_COUNT: 10
-          #   SHOW_TIME: true
-          #   SHOW_TOTAL: true
-          #   SHOW_MASKED_TIME: true
+          TIME_RANGE: all_time
+          LANG_COUNT: 10
+          SHOW_TIME: true
+          SHOW_MASKED_TIME: true
+          SHOW_TOTAL: true
 
         #   COMMIT_MESSAGE: "[automated] Updated waka-readme graph with new metrics"
         #   COMMITTER_NAME: "[bot]WakaGithubActions"
@@ -35,7 +35,7 @@ jobs:
         #   SHOW_TITLE: true # optional
         #   SECTION_NAME: waka # optional
         #   #   BLOCKS: ░▒▓█ # optional
-        #   CODE_LANG: rust # optional
+          CODE_LANG: rust # optional
         #   TIME_RANGE: all_time # optional
         #   LANG_COUNT: 10 # optional
         #   SHOW_TIME: true # optional
