--- a/.github/workflows/waka-readme.yml
+++ b/.github/workflows/waka-readme.yml
@@ -1,11 +1,11 @@
 name: Waka Readme
 
 on:
-  push:
-    branches: main
+  # push:
+    # branches: main
   workflow_dispatch:
-  schedule:
-    - cron: "0 0 * * *"
+  # schedule:
+    # - cron: "0 0 * * *"
 
 jobs:
   update-readme:
